# splat

./: Cargo.toml  README.md
assets/: app.sh  commands.linear.total_steps.bad.toml  commands.linear.total_steps.good.toml  commands.random.weights.bad.toml  commands.random.weights.good.toml  commands.toml  select.variant.bad.toml
src/: config.rs  logging.rs  main.rs  session.rs  setup.rs
src/session/: create.rs  details.rs  job.rs  modifiers.rs
