[package]
name = "splat"
version = "0.1.0"
edition = "2024"

[dependencies]
# Derserialization 
garde     = { version = "0.22.1", features = ["full"] }
serde     = { version = "1.0.228", features = ["derive"] }
thiserror = { version = "2.0.17" }
toml      = { version = "0.9.8" }

# Logging 
tracing   = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

